# chokobot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCUMENTACAO_ALTERACOES_AUDITORIA.md  Dockerfile  Makefile  PLANO_ACAO_AUDITORIA.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
.specs/: design.md  proposal.md  tasks.md
app/: chokobot.sqbpro  config.py  conversation_main.py  edge_main.py  handler.py  main.py  models.py  observability.py  routes.py  security.py  settings.py  templates_engine.py  utils.py  welcome_message.py
dados/: README.md  atendimentos.txt  chokobot.db  chokobot.sqbpro  clientes.txt  domain_events.jsonl  encomendas.txt  entregas.txt  export_encomendas.txt  outbox.jsonl
docs/: CHANGELOG_DEMANDAS_2026-04-23.md  MIGRACAO_EVOLUTION_API.md  TODO_DEMANDAS_2026-04-23.md  admin-modernization-rollout.md  alteracoes-89ba10c.md  alteracoes-recomendacoes-priorizadas-2026-03-27.md  executive-implementation-plan.md  frontend-production-analysis.md  panel-e2e-analysis.md  project-general-analysis.md  sprints-atendimento.md  whatsapp-conversation-ops-audit.md
frontend/: .env.local.example  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
migrations/: README.md
scripts/: cleanup_test_orders.py  reprocess_outbox.py  run_tests.py  seed_demo_inbox.py  sync_catalogo_produtos.py  test_db.py
tests/: test_admin_frontend_redirects.py  test_ai_advanced.py  test_ai_agent.py  test_ai_agent_prompts.py  test_ai_all_flows.py  test_ai_auto_schedule.py  test_ai_cafeteria_order.py  test_ai_cake_options.py  (+54 more)
(+190 files in other folders)
