[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chokobot"
version = "0.1.0"
description = "Chokobot service platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "python-dotenv",
  "httpx",
  "jinja2",
  "python-multipart",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "redis>=5.0",
  "openai>=1.0.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  ".git",
  ".tmp",
  ".venv",
  "dados",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
